--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -99,7 +99,7 @@
                 <div id="homePageSpot" class="firstPageSpotCardsPart">
                     <!-- spot cards start-->        
                     <div v-for="spot in homePageSpots" class="card cardSpot cardOriginalTem ">
-                        <a>
+                        <a class="homePageSpotCarda" >
                             <img v-if="spot.Attrac_PicURL == ''" :src="output" class="card-img-top">
                             <img  v-else :src="spot.Attrac_PicURL" class="card-img-top">
                             <div class="card-body card-img-overlay cardImgOverlayWebUse">
@@ -199,7 +199,7 @@
             <!-- 景點卡片 -->
             <!-- spot cards start-->
             <div  v-for="spot in homePageSpots" class="card cardSpot cardOriginalTem cardSpotRWDindex" style="width:18rem;margin-bottom: 10px;">
-                <a>
+                <a class="homePageSpotCarda" >
                     <img v-if="spot.Attrac_PicURL == ''" :src="output" class="card-img-top">
                     <img  v-else :src="spot.Attrac_PicURL" class="card-img-top">
                     <div class="card-body card-img-overlay cardImgOverlayWebUse">
