--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -12,7 +12,7 @@
         </button>
     </div>
     <hr />
-    <div class="chooseBlock row">
+    <div class="chooseBlock row" id="groupCardsAll">
 
         <button class="groupFBtn col-3 col-md-2" @click="sortByLatest"> 
             最新刊登 &darr;
