--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -17,7 +17,7 @@
         <button class="groupFBtn col-3 col-md-2" @click="sortByLatest"> 
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" @click="sortByLike">
+        <button class="groupFBtn col-3 col-md-2" onclick="groupSortByLike()">
             最高評價 &darr;
         </button>
 
