--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -1,8 +1,8 @@
 <div style="width:1000px;height:500px;"></div>
 <div class="container">
     <div class="openNewGroup col-4 col-l-2 col-md-2 col-lg-2">
-        <a  onclick="openNewGroup();">
-            <img src="./images/openNewGroup.png"  class="d-md-block" />
+        <a onclick="openNewGroup();">
+            <img src="./images/openNewGroup.png" class="d-md-block" />
         </a>
     </div>
     <div class="tabAll">
@@ -15,6 +15,16 @@
                 <aside class="actCont">
                     <h3>活動說明</h3>
                     <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+                    <p>London is the capital city of England.</p>
+
                 </aside>
                 <aside class="btnsAct">
                     <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
@@ -158,6 +168,4 @@
         document.getElementById(cityName).style.display = "block ";
         evt.currentTarget.className += " active ";
     }
-
-   
 </script>
