--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -14,10 +14,10 @@
     <hr />
     <div class="chooseBlock row">
 
-        <button class="groupFBtn col-3 col-md-2" @click="sortByLatest"> 
+        <button class="groupFBtn col-3 col-md-2" onclick="sortByLatest()"> 
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" @click="SortByLike">
+        <button class="groupFBtn col-3 col-md-2" onclick="SortByLike()">
             最高評價 &darr;
         </button>
 
