--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -11,11 +11,11 @@
             <button class="tabs" onclick="openCity(event, 'chat')">留言板</button>
         </div>
         <div id="activity" class="tabcontent" style="display:block;">
-            <div class="actAll">
+            <div class="actAll" id="groupShowAll">
                 <aside class="actCont">
                     <h3>活動說明</h3>
                     <p>London is the capital city of England.</p>
-
+                    <p>{{groupShow.Group_title}}</p>
                 </aside>
                 <aside class="btnsAct">
                     <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
