--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -169,7 +169,7 @@
                 <div id="groupCardsAll">
                     <div v-for="groupCard in groupCardsAlls" class="card cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
-                        <a href="groupShow.php?=Group_NO<?=groupShowRow['Group_NO'];?>">
+                        <a href="./groupInside.html">
                             <img :src="groupCard.Group_Pic " class="card-img-top " alt="... ">
                             <div class="card-body card-img-overlay cardImgOverlayWebUse ">
                                 <h5 class="card-title cardTitleWebUse ">揪團</h5>
