--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -10,8 +10,8 @@
             <button class="tabs" onclick="openCity(event, 'activity')">活動說明</button>
             <button class="tabs" onclick="openCity(event, 'chat')">留言板</button>
         </div>
-        <div id="groupShowAll">
-            <div id="activity" class="tabcontent" style="display:block;" v-for="groupShow in groupShowsAlls">
+        <div id="groupShowAll" name="groupShowAll">
+            <div id="activity" class="tabcontent" style="display:block;">
                 <div class="actAll">
                     <aside class="actCont">
                         <h3>活動說明</h3>
