--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -5,7 +5,7 @@
             <img src="./images/openNewGroup.png" class="d-md-block" />
         </a>
     </div>
-    <div id="groupShowAll" class="tabAll">
+    <div class="tabAll">
         <div class="tab">
             <button class="tabs" onclick="openCity(event, 'activity')">活動說明</button>
             <button class="tabs" onclick="openCity(event, 'chat')">留言板</button>
@@ -13,55 +13,97 @@
         <div id="activity" class="tabcontent" style="display:block;">
             <div class="actAll">
                 <aside class="actCont">
+
                     <h3>活動說明</h3>
                     <p>London is the capital city of England.</p>
-                    <p>{{groupShow.Group_title}}</p>
-                    <table class="prodTable">
-                        <tr>
-                            <th>團號</th>
+                    <div id="groupShowAlls_1">
+                        <table class="">
+                            <tr>
+                                <th>團號</th>
+                                <td>
+                                    {{groupShowAlls_1.Group_NO}}
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>團名</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["Group_title"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>出發日期</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["Group_StartDate"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>結束日期</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["price"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>報名截止</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["author"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>限定人數</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["pages"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>性別限制</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["pages"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>年齡限制</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["pages"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>團費</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["pages"]?>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>集合地點</th>
+                                <td>
+                                    {{groupShow.Group_NO}}
+                                    <?=$groupShowRows["pages"]?>
+                                </td>
+                            </tr>
+                            <th>備註</th>
                             <td>
                                 {{groupShow.Group_NO}}
-                                <?=$groupShowRows["Group_NO"]?>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>團名</th>
-                            <td>
-                                <?=$groupShowRows["Group_title"]?>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>出發日期</th>
-                            <td>
-                                <?=$groupShowRows["Group_StartDate"]?>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>價格</th>
-                            <td>
-                                <?=$groupShowRows["price"]?>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>作者</th>
-                            <td>
-                                <?=$groupShowRows["author"]?>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>頁數</th>
-                            <td>
                                 <?=$groupShowRows["pages"]?>
                             </td>
-                        </tr>
-                    </table>
-
+                            </tr>
+                        </table>
+                    </div>
                 </aside>
                 <aside class="btnsAct">
                     <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
-                                                    src="#">我要報名</button>
-                    <button><img src="#">分享此團</button>
-                    <button><img src="#">收藏此團</button>
+                                                                src="#">我要報名</button>
+                    <button><img
+                                                                src="#">分享此團</button>
+                    <button><img
+                                                                src="#">收藏此團</button>
                 </aside>
             </div>
             <hr>
@@ -84,7 +126,8 @@
                         <td rowspan="3"><img class="commentor" src="./images/profile.jpg"></td>
                         <td>
                             <span>愛旅遊</span>
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -92,7 +135,8 @@
                     </tr>
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -103,7 +147,8 @@
                         <td rowspan="3"><img class="commentor" src="./images/profile.jpg"></td>
                         <td>
                             <span>愛旅遊</span>
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -111,7 +156,8 @@
                     </tr>
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -121,7 +167,8 @@
                         <td rowspan="3"><img class="commentor" src="./images/profile.jpg"></td>
                         <td>
                             <span>愛旅遊</span>
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -129,7 +176,8 @@
                     </tr>
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
-                            <time>2020/05/09 10:24</time>
+                            <time>2020/05/09
+                                                                    10:24</time>
                         </td>
                     </tr>
                 </table>
