--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -16,19 +16,20 @@
 
                     <h3>活動說明</h3>
                     <p>London is the capital city of England.</p>
-                    <div id="groupShowAlls_1">
+                    <div id="groupShowAlls">
                         <table class="">
                             <tr>
                                 <th>團號</th>
                                 <td>
                                     {{groupShowAlls_1.Group_NO}}
+                                    <?=$groupShowRows["Group_title"]?>
 
                                 </td>
                             </tr>
                             <tr>
                                 <th>團名</th>
                                 <td>
-                                    {{groupShow.Group_NO}}
+                                    {{groupShowAlls.Group_NO}}
                                     <?=$groupShowRows["Group_title"]?>
                                 </td>
                             </tr>
@@ -99,11 +100,11 @@
                 </aside>
                 <aside class="btnsAct">
                     <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
-                                                                src="#">我要報名</button>
+                                                                    src="#">我要報名</button>
                     <button><img
-                                                                src="#">分享此團</button>
+                                                                    src="#">分享此團</button>
                     <button><img
-                                                                src="#">收藏此團</button>
+                                                                    src="#">收藏此團</button>
                 </aside>
             </div>
             <hr>
@@ -127,7 +128,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -136,7 +137,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -148,7 +149,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -157,7 +158,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -168,7 +169,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -177,7 +178,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                    10:24</time>
+                                                                        10:24</time>
                         </td>
                     </tr>
                 </table>
