--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -16,7 +16,7 @@
 
                     <h3>活動說明</h3>
                     <p>London is the capital city of England.</p>
-                    <div id="groupShowAlls">
+                    <!-- <div id="groupShowAlls">
                         <table class="">
                             <tr>
                                 <th>團號</th>
@@ -96,15 +96,13 @@
                             </td>
                             </tr>
                         </table>
-                    </div>
+                    </div> -->
                 </aside>
                 <aside class="btnsAct">
                     <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
-                                                                    src="#">我要報名</button>
-                    <button><img
-                                                                    src="#">分享此團</button>
-                    <button><img
-                                                                    src="#">收藏此團</button>
+                            src="#">我要報名</button>
+                    <button><img src="#">分享此團</button>
+                    <button><img src="#">收藏此團</button>
                 </aside>
             </div>
             <hr>
@@ -128,7 +126,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -137,7 +135,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -149,7 +147,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -158,7 +156,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                 </table>
@@ -169,7 +167,7 @@
                         <td>
                             <span>愛旅遊</span>
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                     <tr>
@@ -178,7 +176,7 @@
                     <tr>
                         <td class="replies">答覆：約落在2萬～3萬左右！
                             <time>2020/05/09
-                                                                        10:24</time>
+                                10:24</time>
                         </td>
                     </tr>
                 </table>
