--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -95,8 +95,8 @@
                     </div>
                     <div id="keepsche" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高人氣&darr;</button>
+                            <button class="filterBtn"  data-keepsort="scheNew" onclick="sortKeep(this)">最新刊登&darr;</button>
+                            <button class="filterBtn" data-keepsort="schePop" onclick="sortKeep(this)">最高人氣&darr;</button>
                         </div>
                         <!-- 行程收藏 -->
                         <div id="scheForKeep" class="keepAllWall" >
@@ -129,8 +129,8 @@
                     </div>
                     <div id="keepgroup" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高評價&darr;</button>
+                            <button class="filterBtn" data-keepsort="groupNew" onclick="sortKeep(this)">最新刊登&darr;</button>
+                            <!-- <button class="filterBtn" data-keepsort="groupPop" onclick="sortKeep(this)">最高評價&darr;</button> -->
                         </div>
                         <!-- 揪團收藏 -->
                         <div id="groupForKeep" class="keepAllWall">
@@ -170,8 +170,8 @@
                     </div>
                     <div id="keepblog" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高人氣&darr;</button>
+                            <button class="filterBtn" data-keepsort="blogNew" onclick="sortKeep(this)">最新刊登&darr;</button>
+                            <button class="filterBtn" data-keepsort="blogPop" onclick="sortKeep(this)">最高人氣&darr;</button>
                         </div>
                         <!-- 遊記收藏 -->
                         <div id="blogForKeep" class="keepAllWall">
@@ -205,7 +205,7 @@
                 </div>
                 <div id="schedule" class="memRightContainer" style="display:none">
                     <!-- 會員中心＿行程 -->
-                    <div id="schedForMem" class="memRightWall">
+                    <div id="schedForMem" class="memRightWall" >
                         <!-- 會員中心＿行程 -->
                         <!-- mem sche start -->
                         <div v-for="memSche in memSches" class="card  cardOriginalTem cardSchedule cardMemberSchedule" style="width: 18rem;">
