group Search function done

--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -6,7 +6,7 @@
     </div>
     <!-- search bar -->
     <div class="blogViewSearchBar row">
-        <input type="text" placeholder="來看看有哪些揪團" class="col col-md-5" />
+        <input type="text" placeholder="來看看有哪些遊記" class="col col-md-5" />
         <button>
             <img src="./images/iconSearch.png" alt="" />
         </button>
@@ -23,7 +23,7 @@
     <div class="blogCardsBlockView">
         <div class="mainBlogCardsArea">
             <!-- 卡片區塊start -->
-            <div  class="card cardOriginalTem cardBlog cardBlogOnBlogView d-none
+            <div class="card cardOriginalTem cardBlog cardBlogOnBlogView d-none
                 d-md-block" style="width: 18rem;">
                 <a href="./blogInside.html">
                     <img src="./images/1.png" class="card-img-top" alt="...">
