--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -6,12 +6,12 @@
     </div>
     <!-- search bar -->
     <div class="groupViewSearchBar row">
-        <form action="groupSearch.php">
-            <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些揪團" class="col col-md-5" />
-            <button type="submit" id="groupSearch" class="groupSearch">
-                <img src="./images/iconSearch.png" />
-            </button>
-        </form>
+        <!-- <form action="groupSearch.php" method="GET"> -->
+        <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些揪團" class="col col-md-5" />
+        <button type="button" id="groupSearch" class="groupSearch">
+            <img src="./images/iconSearch.png" />
+        </button>
+        <!-- </form> -->
     </div>
     <hr />
     <div class="chooseBlock row">
@@ -26,7 +26,8 @@
         <div class="d-flex mobileFilter col-3 col-md-3 col-lg-1 d-none
             d-sm-block d-md-none">
             <div class="dropdown mr-1">
-                <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     篩選
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
@@ -43,95 +44,87 @@
     <div class="mainGroupView row d-flex">
         <div class="groupViewLeft col-sm-3 d-none d-sm-none d-md-block">
             <!-- fliter Start -->
-            <div class="fliterBlock">
-                <table>
-                    <tr>
-                        <th colspan="2">縮小範圍顯示</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p class="fliterBlock_p">團員人數：</p>
-                        </td>
-                        <td>
-                            <select name="groupView_FliterPpl" method="post" action="groupViewFilter.php">
-                                <option value="1" selected>任意</option>
-                                <option value="2">20人以上</option>
-                                <option value="3">6-10人</option>
-                                <option value="4">10-15人</option>
-                                <option value="5">15-20人</option>
-                                <option value="6">20人以上</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <!-- <tr>
-                        <td>
-                            <p class="fliterBlock_p">集合地點:</p>
-                        </td>
-                        <td>
-                            <select name="groupView_FliterArea" method="post" action="groupViewFilter.php">
-                                <option value="6" selected>北區</option>
-                                <option value="7">中區</option>
-                                <option value="8">南區</option>
-                                <option value="9">東區</option>
-                                <option value="10">外島</option>
-                            </select>
-                        </td>
-                    </tr> -->
-                    <tr>
-                        <td>
-                            <p class="fliterBlock_p">性別限制:</p>
-                        </td>
-                        <td>
-                            <select name="groupView_FliterSex" method="post" action="groupViewFilter.php">
-                                <option value="7" selected>不限制</option>
-                                <option value="8">限女</option>
-                                <option value="9">限男</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p class="fliterBlock_p">旅遊天數:</p>
-                        </td>
-                        <td>
-                            <select name="groupView_FliterDay" method="post" action="groupViewFilter.php">
-                                <option value="10" selected>任意</option>
-                                <option value="11">1</option>
-                                <option value="12">1-5</option>
-                                <option value="13">5-10</option>
-                                <option value="14">10以上</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p class="fliterBlock_p">出發月份:</p>
-                        </td>
-                        <td>
-                            <select name="groupView_FliterMonth" method="post" action="groupViewFilter.php">
-                                <option value="15" selected>任意</option>
-                                <option value="16">一月</option>
-                                <option value="17">二月</option>
-                                <option value="18">三月</option>
-                                <option value="19">四月</option>
-                                <option value="20">五月</option>
-                                <option value="21">六月</option>
-                                <option value="22">七月</option>
-                                <option value="23">八月</option>
-                                <option value="24">九月</option>
-                                <option value="25">十月</option>
-                                <option value="26">十一月</option>
-                                <option value="27">十二月</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <button class="btn1111" type="submit">篩選</button>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+            <!-- method="post" action="groupViewFilter.php" -->
+            <form id="filter">
+                <div class="fliterBlock">
+                    <table>
+                        <tr>
+                            <th colspan="2">縮小範圍顯示</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="fliterBlock_p">團員人數：</p>
+                            </td>
+                            <td>
+                                <select name="groupView_FliterPpl">
+                                    <option value="" selected>任意</option>
+                                    <option value="and Group_Ppl<=5">1-5人</option>
+                                    <option value="and Group_Ppl between 5 and 10">6-10人</option>
+                                    <option value="and Group_Ppl between 10 and 15">10-15人</option>
+                                    <option value="and Group_Ppl between 15 and 20">15-20人</option>
+                                    <option value="and 20<Group_Ppl">20人以上</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="fliterBlock_p">性別限制:</p>
+                            </td>
+                            <td>
+                                <select name="groupView_FliterSex">
+                                    <option value="" selected>不限制</option>
+                                    <option value="and Group_Sex=1">限女</option>
+                                    <option value="and Group_Sex=2">限男</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="fliterBlock_p">旅遊天數:</p>
+                            </td>
+                            <td>
+                                <select name="groupView_FliterDay">
+                                    <option value="" selected>任意</option>
+                                    <option value="and datediff(Group_EndDate,Group_StartDate)+1=1">1</option>
+                                    <option value="and datediff(Group_EndDate,Group_StartDate)+1 between 1 and 5">1-5
+                                    </option>
+                                    <option value="and datediff(Group_EndDate,Group_StartDate)+1 between 5 and 10">5-10
+                                    </option>
+                                    <option value="and 10<datediff(Group_EndDate,Group_StartDate)+1">10以上</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="fliterBlock_p">出發月份:</p>
+                            </td>
+                            <td>
+                                <select name="groupView_FliterMonth">
+                                    <option value="" selected>任意</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=01">一月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=02">二月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=03">三月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=04">四月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=05">五月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=06">六月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=07">七月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=08">八月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=09">九月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=10">十月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=11">十一月</option>
+                                    <option value="and date_format(Group_StartDate,'%m')=12">十二月</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <button class="btn1111" id="btnGroupFilter" type="button">篩選</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </form>
+
             <!-- Fliter End -->
             <!-- Hot Schedule Start -->
             <div class="hotScheBlock d-none d-md-block">
@@ -171,6 +164,7 @@
             <div class="groupViewPCcardBlock d-md-flex d-none">
                 <!-- 揪團卡片 -->
                 <div id="groupCardsAll">
+                    <!-- <input type="text" v-model="search" placeholder="Search title.." /> -->
                     <div v-for="groupCard in groupCardsAlls" class="card cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
                         <a href="./groupInside.html">
@@ -267,66 +261,66 @@
 
                                 <div>
                                     <p>報名截止：{{groupCardCarousel_2.Group_Deadline}}</p>
-                                </div>
                             </div>
                         </div>
-                    </a>
                 </div>
+                </a>
             </div>
-            <div id="groupCardCarousel_3" class="carousel-item" name="groupCardCarousel_3">
-                <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
-                    <a href="">
-                        <img :src="groupCardCarousel_3.Group_Pic" class="card-img-top" alt="...">
-                        <div class="card-body card-img-overlay
+        </div>
+        <div id="groupCardCarousel_3" class="carousel-item" name="groupCardCarousel_3">
+            <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
+                <a href="">
+                    <img :src="groupCardCarousel_3.Group_Pic" class="card-img-top" alt="...">
+                    <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
-                            <h5 class="card-title cardTitleWebUse">揪團</h5>
-                            <div class="mask">
-                                <p class="card-text cardTextWebUse">{{groupCardCarousel_3.Group_title}}</p>
+                        <h5 class="card-title cardTitleWebUse">揪團</h5>
+                        <div class="mask">
+                            <p class="card-text cardTextWebUse">{{groupCardCarousel_3.Group_title}}</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="cardGroupContent">
+                            <p>團主：{{groupCardCarousel_3.Mem_name}}</p>
+                            <div>
+                                <p>團主評價：
+                                    <img src="./images/good.png" alt="">{{groupCardCarousel_3.hostlike}}
+                                </p>
+
+                            </div>
+                            <p>出團日期：{{groupCardCarousel_3.Group_StartDate}}</p>
+
+                            <div>
+                                <p>報名截止：{{groupCardCarousel_3.Group_Deadline}}</p>
                             </div>
                         </div>
-                        <div>
-                            <div class="cardGroupContent">
-                                <p>團主：{{groupCardCarousel_3.Mem_name}}</p>
-                                <div>
-                                    <p>團主評價：
-                                        <img src="./images/good.png" alt="">{{groupCardCarousel_3.hostlike}}
-                                    </p>
-
-                                </div>
-                                <p>出團日期：{{groupCardCarousel_3.Group_StartDate}}</p>
-
-                                <div>
-                                    <p>報名截止：{{groupCardCarousel_3.Group_Deadline}}</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
-            <div id="groupCardCarousel_4" class="carousel-item" name="groupCardCarousel_4">
-                <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
-                    <a href="">
-                        <img :src="groupCardCarousel_4.Group_Pic" class="card-img-top" alt="...">
-                        <div class="card-body card-img-overlay
+        </div>
+        <div id="groupCardCarousel_4" class="carousel-item" name="groupCardCarousel_4">
+            <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
+                <a href="">
+                    <img :src="groupCardCarousel_4.Group_Pic" class="card-img-top" alt="...">
+                    <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
-                            <h5 class="card-title cardTitleWebUse">揪團</h5>
-                            <div class="mask">
-                                <p class="card-text cardTextWebUse">{{groupCardCarousel_4.Group_title}}</p>
-                            </div>
+                        <h5 class="card-title cardTitleWebUse">揪團</h5>
+                        <div class="mask">
+                            <p class="card-text cardTextWebUse">{{groupCardCarousel_4.Group_title}}</p>
                         </div>
-                        <div>
-                            <div class="cardGroupContent">
-                                <p>團主：{{groupCardCarousel_4.Mem_name}}</p>
-                                <div>
-                                    <p>團主評價：
-                                        <img src="./images/good.png" alt="">{{groupCardCarousel_4.hostlike}}
-                                    </p>
+                    </div>
+                    <div>
+                        <div class="cardGroupContent">
+                            <p>團主：{{groupCardCarousel_4.Mem_name}}</p>
+                            <div>
+                                <p>團主評價：
+                                    <img src="./images/good.png" alt="">{{groupCardCarousel_4.hostlike}}
+                                </p>
 
-                                </div>
-                                <p>出團日期：{{groupCardCarousel_4.Group_StartDate}}</p>
+                            </div>
+                            <p>出團日期：{{groupCardCarousel_4.Group_StartDate}}</p>
 
-                                <div>
-                                    <p>報名截止：{{groupCardCarousel_4.Group_Deadline}</p>
+                            <div>
+                                <p>報名截止：{{groupCardCarousel_4.Group_Deadline}</p>
                                 </div>
                             </div>
                         </div>
@@ -360,21 +354,21 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
-                </div>
+                </a>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselPhoneGroupControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon
-                            groupCarouselIcon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselPhoneGroupControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon
-                            groupCarouselIcon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
+    <a class="carousel-control-prev" href="#carouselPhoneGroupControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselPhoneGroupControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 </div>
 <!-- <div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
     <div id="carouselPhoneScheControls" class="carousel slide" data-ride="carousel">
